<resources>
    <string name="app_name">Health Tunnel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_not_share_mobile_number">We will never share your number with anyone ever!</string>
    <string name="hint_enter_mobile_number">"Enter your mobile number            "</string>
    <string name="titl_start_living_health_life">Start living your healthiest life!</string>
    <string name="input_digits">0123456789</string>
    <string name="action_submit">Submit</string>
    <string name="invalid_mobile">Invalid Mobile Number</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="title_enter_otp">Enter OTP</string>
    <string name="title_resent_otp_message">Didn’t receive the OTP?</string>
    <string name="title_get_otp">Get OTP</string>
    <string name="hint_otp">OTP</string>
    <string name="title_almost_there">Almost There!</string>
    <string name="my_full_name">Name*</string>
    <string name="my_full_email">Enter your email address*</string>
    <string name="required_name">"Please enter your name "</string>
    <string name="required_email">Please enter your email</string>
    <string name="required_correct_name">Please enter correct email</string>
    <string name="required_gender">Please select your gender</string>
    <string name="my_gender">Select Gender*</string>
    <string name="error_invalid_otp">Invalid OTP</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="title_permission_denied">Location Permission Denied</string>
    <string name="message_permission_denied">The app will not work without providing location permission. Allow permission?</string>
    <string name="settings">Settings</string>
    <string name="not_now">Not now</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="title_permission_permanently_denied">Location Permission Permanently Denied</string>
    <string name="message_permission_permanently_denied">The app will not work without providing location permission.Open App settings -> Permissions -> Allow permission.</string>
    <string name="title_location">Location</string>
    <string name="title_category">Popular Category</string>
    <string name="title_wellness_corner">Wellness Corner</string>
    <string name="title_community_center">Community Center</string>
    <string name="title_community_desc">We update this space on people requesting blood for many reasons, most Importantly, to save lives.</string>
    <string name="title_view_request">View Requests</string>
    <string name="title_support_donate"><![CDATA[Support & Donate]]></string>
    <string name="title_donate_blood">Blood Donor Registration</string>
    <string name="title_request_blood">Request Blood to Save Lives</string>
    <string name="title_donate_money"><![CDATA[Donate Money Now]]></string>
    <string name="title_feature_products">Featured Products</string>
    <string name="title_become_blood_donar">Become a Blood Donor</string>
    <string name="title_blood_donar_desc">Register to be a blood donor, give blood and save lives. Register to find out more.</string>
    <string name="titl_year_of_birth">Year of Birth*</string>
    <string name="titl_select">Select</string>
    <string name="titl_blood_type">Blood Type*</string>
    <string name="titl_blood_donate_message">Have you donated Blood in the last 90 days?</string>
    <string name="titl_covid_survivour">Are you Covid 19 survivor?</string>
    <string name="titl_blood_donate_plasma">Also, Donate Plasma blood</string>
    <string name="title_select_gender">Select Gender</string>
    <string name="title_select_blood_type">Select blood type</string>
    <string name="title_select_birth_year">Select Year of birth</string>
    <string name="titl_blood_donation_terms_condition">I am voluntarily registering with Health Tunnel as a blood donor to save life’s and I declare that I am in good health and free of any transmissible diseases to best of my knowledge</string>
    <string name="title_all_field_mendator">All fields are mandatory to select.</string>
    <string name="titl_patient_name">Patient Name*</string>
    <string name="title_request_form">Request Form</string>
    <string name="titl_full_name">Enter Full Name</string>
    <string name="titl_age">Age*</string>
    <string name="titl_gender">Gender*</string>
    <string name="title_enter">Enter</string>
    <string name="titl_blood_type_required">Blood Type Required</string>
    <string name="titl_schedule">Schedule</string>
    <string name="titl_select_req_date">Select required date</string>
    <string name="titl_select_req_time">Select required time</string>
    <string name="titl_location_name">Location name*</string>
    <string name="titl_area_town_name">Enter area/town to receive blood</string>
    <string name="titl_blood_change_reason">Reason for the blood request?</string>
    <string name="titl_blood_requested_for">The blood is requested for?</string>
    <string name="titl_parents_contact">Patient or relative’s contact number</string>
    <string name="titl_enter_mobile">Enter mobile number</string>
    <string name="titl_blood_receiver_status">Status of blood receiver now</string>
    <string name="titl_urgency_details">Details of urgency for the potential donors</string>
    <string name="titl_enter_150_words">Enter max 100 to 150 words</string>
    <string name="titl_upload_photo_patient">Upload photo of patient</string>
    <string name="titl_upload_details">This will help the donor to determine the urgency and come forward to donate.</string>
    <string name="titl_blood_donate">Blood Donation</string>
    <string name="titl_blood_request">Blood Request</string>
    <string name="title_no_url_found">No URL found</string>
    <string name="menu_popular_cat">Popular Category</string>
    <string name="menu_wellness_corner">Wellness Corner</string>
    <string name="menu_comunity_center">Community Center</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="action_corona_text"><![CDATA[Coronavirus (COVID 19) Locations & Statistics]]></string>
    <string name="title_help_required">Help Required</string>
    <string name="title_my_request">My Request</string>
    <string name="title_assistance_delivered">Assistance Delivered</string>
    <string name="title_add_new_request">Add new request</string>
    <string name="my_contact_number">Contact number</string>
    <string name="title_patient_picture">Patient Picture</string>
    <string name="title_urgency_details">Details of urgency</string>
    <string name="title_urgency_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
    <string name="my_patient_name">Patient Name</string>
    <string name="title_required_location">Required location</string>
    <string name="title_required_date_time"><![CDATA[Required date & time]]></string>
    <string name="title_blood_request">Blood Request</string>
    <string name="titl_close_request">Close Request</string>
    <string name="title_popular_categories">Popular Categories</string>
    <string name="title_select_location">Select Location</string>
    <string name="title_use_current_location">Use my current location</string>
    <string name="google_maps_key">AIzaSyBeJwN8xXIFgJXQH1JplP8Bh2cZVcTXZrc</string>
    <string name="title_abs_foundation">AABS FOUNDATION</string>
    <string name="title_about">About</string>
    <string name="title_donate_for_credit">Donate for Cancer Patient</string>
    <string name="title_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="title_doate_now">Donate Now</string>
    <string name="title_700">Rs.700</string>
    <string name="title_700_details">Medicines for 6 patients a day</string>
    <string name="title_1500">Rs.1500</string>
    <string name="title_1500_details">Medicine for 15 patients a day</string>
    <string name="title_300">Rs.3000</string>
    <string name="title_3000_details">Medicine and Medical consumables for 25 patients a day</string>
    <string name="title_7000">Rs.7000</string>
    <string name="title_7000_details">Medicine and Medical consumables and food for 50 patients a day</string>
    <string name="title_donate_for_medicine">Donate Medicines – Support the less privileged</string>
    <string name="title_dummy_text_medicine">Paediatric medicines are required for common illness in Children. With your kind generosity, we are able to look after thousands of underprivileged children from basic illness to severe medical condition with special emphasis on vitamin deficiencies and malnutrition that effects of every illness.</string>
    <string name="title_700_medicine_details">Medicine for 3 children per month</string>
    <string name="title_700_medicine">Rs.700</string>
    <string name="title_1500_medicine">Rs.1500</string>
    <string name="title_1500_medicine_details">Medicine for 10 children per month</string>
    <string name="title_3000_medicine">Rs.3000</string>
    <string name="title_3000_medicine_details">Medicine and Medical consumables for 25 children per month</string>
    <string name="title_7000_medicine">Rs.7000</string>
    <string name="title_bill_details">Bill Details</string>
    <string name="title_total_item">Item Total</string>
    <string name="title_pay_now">To Pay</string>
    <string name="title_summary">Summary</string>
    <string name="title_delivery_address">Delivery Address</string>
    <string name="title_delivery_address_details">No.5/A, R.K. Plaza, 80 Feet Rd, RMV 2nd Stage, Ashwath Nagar, Bengaluru, Karnataka 560094</string>
    <string name="title_proceed_to_pay">Proceed to Pay</string>
    <string name="title_coupon_code">"Coupon Code : "</string>
    <string name="title_coupon_details">Coupon Details</string>
    <string name="title_copy_coupon">Copy</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="title_diabetes_mgmt">Diabetes Mgmt</string>
    <string name="title_popular_serchces">Popular Searches</string>
    <string name="text_view_profile">View Profile</string>
    <string name="title_order_medicine">Order Medicine</string>
    <string name="title_book_lab_tests">Book Lab Tests</string>
    <string name="title_doctor_consultation">Doctor Consultation</string>
    <string name="title_fertility_clinic">Fertility Clinic</string>
    <string name="title_weight_loss">Weight Loss</string>
    <string name="title_rent_medical_equipment">Rent Medical Equipment</string>
    <string name="title_health_insurance_policy">Buy Health Insurance Policy</string>
    <string name="title_yoga_wellness"><![CDATA[Yoga & Wellness]]></string>
    <string name="title_organic_food_store">Organic Food Stores</string>
    <string name="action_skip_now">Skip Now</string>
    <string name="email_instruction">We collect your email address and gender only to provide customised offers to you and both are confidential and intended solely for the use of HealthTunnel.</string>
</resources>