<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_summary"
            app:titleTextColor="@color/header_black">


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/topCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="3dp"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/billDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/bold"
                android:text="@string/title_bill_details"
                android:textColor="@color/header_black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/title_total_item"
                android:textColor="@color/header_black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/billDetails"
                app:layout_constraintTop_toBottomOf="@+id/billDetails" />

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/regular"
                android:textColor="@color/header_black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/total_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/total_amount" />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"
                android:background="@color/divider"
                app:layout_constraintTop_toBottomOf="@+id/totalAmount" />

            <TextView
                android:id="@+id/to_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/bold"
                android:text="@string/title_pay_now"
                android:textColor="@color/color_green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/billDetails"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/toPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textColor="@color/color_green"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/to_pay"
                app:layout_constraintStart_toStartOf="@+id/totalAmount"
                app:layout_constraintTop_toTopOf="@+id/to_pay" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="3dp"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/topCv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/bold"
                android:text="@string/title_delivery_address"
                android:textColor="@color/header_black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_edit"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/delivery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/delivery" />

            <TextView
                android:id="@+id/deliveryAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/title_delivery_address_details"
                android:textColor="@color/header_black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/delivery"
                app:layout_constraintTop_toBottomOf="@+id/delivery" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/paymentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_shape"
        android:fontFamily="@font/bold"
        android:text="@string/title_proceed_to_pay"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="@+id/topCv"
        app:layout_constraintStart_toStartOf="@+id/topCv"
        app:layout_constraintTop_toBottomOf="@+id/bottomCv" />

</androidx.constraintlayout.widget.ConstraintLayout>